--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,19 @@
 }
 
 .logo {
-    width: 120px;
-    height: 31px;
-    background: rgba(255, 255, 255, 0.2);
-    margin: 16px;
+    padding: 5px;
+    width: 60px;
+    height: auto;
+    object-fit: contain;
     float: left;
+    margin-right: 20px;
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
