--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,24 @@
     -ms-user-select: none;
     user-select: none;
 }
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.item-left {
+    height: auto;
+    flex-grow: 3;
+    border-width: 0 1px 0 0;
+    border-style: solid;
+    margin-right: 10px;
+    /* background-color: aqua; */
+}
+
+.item-right {
+    height: auto;
+    flex-grow: 1;
+    /* background-color: purple; */
+}
