--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,19 @@
     margin: 24px;
     padding: 24px;
     height: 100%;
+    -webkit-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
+    -moz-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
+    box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
 }
 
 .logo {
-    padding: 5px;
-    width: 60px;
-    height: auto;
+    padding-top: 10px;
+    width: auto;
+    height: 80%;
     object-fit: contain;
     float: left;
-    margin-right: 20px;
+    margin-right: 50px;
+    display: block;
 }
 
 .unselectable {
