--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.App {
+    min-width: 500px;
+}
+
 .layout {
     height: 100vh;
 }
@@ -10,16 +14,7 @@
     -webkit-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     -moz-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
-}
-
-.logo {
-    padding-top: 10px;
-    width: auto;
-    height: 80%;
-    object-fit: contain;
-    float: left;
-    margin-right: 50px;
-    display: block;
+    background: #ececec;
 }
 
 .unselectable {
