--- a/src/components/CountDown/CountDown.module.css
+++ b/src/components/CountDown/CountDown.module.css
@@ -1,3 +1,11 @@
+h1 {
+    font-size: 4em;
+}
+
+h2 {
+    font-size: 8em;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -6,6 +14,7 @@
     width: 100%;
 }
 
-h1 {
-    font-size: 8em;
+.mediaBox {
+    display: flex;
+    flex-direction: row;
 }
