--- a/src/App.css
+++ b/src/App.css
@@ -13,22 +13,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 90%;
     width: 100%;
-    /* margin: 24px; */
     padding: 24px;
 }
 
 .content {
     background: #fff;
-    margin: 24px;
-    padding: 24px;
+    /* margin: 24px;
+    padding: 24px; */
     height: 100%;
     -webkit-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     -moz-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     background: #ececec;
-    max-width: 1000px;
+    max-width: 800px;
 }
 
 .unselectable {
@@ -42,7 +41,7 @@
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     height: 100%;
 }
 
