--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,16 @@
 .App {
-    min-width: 500px;
+    min-width: 450px;
     height: 100vh;
     min-height: 600px;
 }
 
 .layout {
-    /* height: 100vh; */
     height: 100%;
+    width: 100%;
 }
 
 .main {
     display: flex;
-    align-items: center;
     justify-content: center;
     height: 90%;
     width: 100%;
@@ -19,9 +18,6 @@
 }
 
 .content {
-    background: #fff;
-    /* margin: 24px;
-    padding: 24px; */
     height: 100%;
     -webkit-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     -moz-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
