--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
-    min-width: 450px;
+    width: 100vw;
     height: 100vh;
+    min-width: 450px;
     min-height: 600px;
 }
 
@@ -12,9 +13,9 @@
 .main {
     display: flex;
     justify-content: center;
+    padding: 24px 0 0 0;
     height: 90%;
     width: 100%;
-    padding: 24px;
 }
 
 .content {
