--- a/src/components/CountDown/MediaButton/MediaButton.module.css
+++ b/src/components/CountDown/MediaButton/MediaButton.module.css
@@ -1,5 +1,9 @@
 .MediaButton {
-    font-size: 50px;
+    font-size: 100px;
     color: #1890ff;
     padding: 0 5px;
+}
+
+Popconfirm {
+    font-size: 3em;
 }
