--- a/src/App.css
+++ b/src/App.css
@@ -31,15 +31,6 @@ html {
     max-width: 800px;
 }
 
-.unselectable {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
 .container {
     display: flex;
     justify-content: space-evenly;
@@ -59,4 +50,18 @@ html {
     height: auto;
     flex-grow: 1;
     /* background-color: purple; */
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.alarmList {
+    overflow: auto;
+    height: 100%;
 }
