finish TimerList functionality and link to countdown

--- a/src/components/TimerList/TimerList.module.css
+++ b/src/components/TimerList/TimerList.module.css
@@ -3,3 +3,12 @@
     flex-grow: 1;
     /* background-color: purple; */
 }
+
+.timerList {
+    overflow: auto;
+    height: 100%;
+}
+
+.timerItem {
+    cursor: pointer;
+}
