move settings and timers to components and fix styling

--- a/src/components/Timers/TimerList/TimerList.module.css
+++ b/src/components/Timers/TimerList/TimerList.module.css
@@ -1,7 +1,7 @@
 .containerRight {
     height: auto;
     flex-grow: 1;
-    /* background-color: purple; */
+    padding-left: 10px;
 }
 
 .timerList {
