--- a/src/components/Timers/TimerAdder/TimerAdder.module.css
+++ b/src/components/Timers/TimerAdder/TimerAdder.module.css
@@ -3,6 +3,6 @@
     flex-grow: 3;
     border-width: 0 1px 0 0;
     border-style: solid;
-    margin-right: 10px;
-    /* background-color: aqua; */
+    display: flex;
+    flex-direction: column;
 }
