--- a/src/components/CountDown/CountDown.module.css
+++ b/src/components/CountDown/CountDown.module.css
@@ -18,3 +18,13 @@ h2 {
     display: flex;
     flex-direction: row;
 }
+
+@media screen and (max-width: 750px) {
+    h1 {
+        font-size: 3em;
+    }
+
+    h2 {
+        font-size: 5em;
+    }
+}
