--- a/src/components/Timers/TimerAdder/TimerAdder.module.css
+++ b/src/components/Timers/TimerAdder/TimerAdder.module.css
@@ -1,8 +1,15 @@
 .containerLeft {
     height: auto;
-    flex-grow: 3;
+    flex-grow: 1;
     border-width: 0 1px 0 0;
     border-style: solid;
     display: flex;
     flex-direction: column;
+    padding: 0 10px;
+    width: 50%;
+}
+
+.containerDuration {
+    display: flex;
+    flex-direction: row;
 }
