--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@ html {
     -webkit-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     -moz-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
-    background: #ececec;
+    /* background: #ececec; */
+    background: white;
     max-width: 800px;
 }
 
