--- a/src/components/History/History.module.css
+++ b/src/components/History/History.module.css
@@ -3,5 +3,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    width: 60%;
+    width: 100%;
+    /* min-width: 400px; */
+    /* align-items: center; */
 }
