--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,11 @@ html {
     -moz-box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     box-shadow: 0px 0px 25px 5px rgba(0, 0, 0, 0.39);
     /* background: #ececec; */
-    background: white;
     max-width: 800px;
+}
+
+.ant-timeline-item-head {
+    background-color: transparent !important;
 }
 
 .container {
