adjust ant avatar margin

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,9 @@ html {
 .ant-timeline-item-head {
     background-color: transparent !important;
 }
+.ant-list-item-meta-avatar {
+    margin-right: 0px !important;
+}
 
 .container {
     display: flex;
