--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,13 @@ html {
 
 .content {
     height: 100%;
-    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
     /* background: #ececec; */
     max-width: 800px;
     border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.555);
 }
 
 .container {
