changed to small content shadow

--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,9 @@ html {
 
 .content {
     height: 100%;
-    /* -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
     /* background: #ececec; */
     max-width: 800px;
     border: 1px solid rgba(0, 0, 0, 0.1);
